networking/nested/vnet.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "Virtual Network Name."
      }
    },
    "virtualNetworkAddressSpace": {
      "type": "string",
      "metadata": {
        "description": "Virtual Network Address Space."
      }
    },
    "webFrontEndSubnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of web front end subnet."
      }
    },
    "webFrontEndSubnetAddressPrefix": {
      "type": "string",
      "metadata": {
        "description": "Web front end subnet address space."
      }
    },
    "appServerSubnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of app server subnet."
      }
    },
    "appServerSubnetAddresSpace": {
      "type": "string",
      "metadata": {
        "description": "App Server subnet address space."
      }
    },
    "dbServerSubnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of database servers subnet."
      }
    },
    "dbServerSubnetAddressSpace": {
      "type": "string",
      "metadata": {
        "description": "Database servers subnet address space."
      }
    },
    "webFrontEndNsgName": {
      "type": "string",
      "metadata": {
        "description": "NSG for Web Front End Servers."
      }
    },
    "appServerNsgName": {
      "type": "string",
      "metadata": {
        "description": "NSG for Web Front End Servers."
      }
    },
    "dbServerNsgName": {
      "type": "string",
      "metadata": {
        "description": "NSG for Web Front End Servers."
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkName')]",
      "apiVersion": "2020-05-01",
      "location": "[parameters('location')]",
      "comments": "This will build a Virtual Network.",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('webFrontEndNsgName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('appServerNsgName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('dbServerNsgName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('virtualNetworkAddressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('webFrontEndSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('webFrontEndSubnetAddressPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('webFrontEndNsgName'))]"
              }
            }
          },
          {
            "name": "[parameters('appServerSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('appServerSubnetAddresSpace')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('appServerNsgName'))]"
              }
            }
          },
          {
            "name": "[parameters('dbServerSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('dbServerSubnetAddressSpace')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('dbServerNsgName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "parameters('webFrontEndNsgName')",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-05-01",
      "location": "[parameters('location')]",
      "comments": "Network Security Group (NSG) for your web front end server subnet",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp",
            "properties": {
              "priority": 1000,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "3389",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "name": "[parameters('appServerNsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-05-01",
      "location": "[parameters('location')]",
      "comments": "Network Security Group (NSG) for your application server subnet",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp",
            "properties": {
              "priority": 1000,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "3389",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "name": "[parameters('dbServerNsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-05-01",
      "location": "[parameters('location')]",
      "comments": "Network Security Group (NSG) for your DB server subnet",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp",
            "properties": {
              "priority": 1000,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "3389",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    }
  ]
}
